k8s/prod/1.1/ab/flask-k8s-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: flask-k8s-vs
spec:
  hosts:
  - flask-k8s
  http:
  - match:
    - headers:
        user:
          exact: admin
    route:
      - destination:
          host: flask-k8s
          subset: canary
  - route:
    - destination:
        host: flask-k8s
        subset: prod
